crates/plotnik-tests/tests/03-analyze/ref_resolution/multiple_undefined.txt
Q = (foo
  (X)
  (Y)
  (Z)
)
------------------ DIAGNOSTICS -------------------
error: `X` is not defined
 --> query.ptk:2:4
  |
2 |   (X)
  |    ^
  |
help: replace with the defined reference `(Q)`
  |
2 -   (X)
2 +   (Q)
  |

error: `Y` is not defined
 --> query.ptk:3:4
  |
3 |   (Y)
  |    ^
  |
help: replace with the defined reference `(Q)`
  |
3 -   (Y)
3 +   (Q)
  |

error: `Z` is not defined
 --> query.ptk:4:4
  |
4 |   (Z)
  |    ^
  |
help: replace with the defined reference `(Q)`
  |
4 -   (Z)
4 +   (Q)
  |
------------------ DEFINITIONS -------------------
Q
  X?
  Y?
  Z?
